Bug 1250550 - Ensure a scroll event posted during a refresh driver tick fires during that same tick. r=mats

MozReview-Commit-ID: 1ZvYjA6a5ay